--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         <tr class="chapter-wrap">
            <td class="chapter-index">第 1 节</td>
            <td class="chapter-title">
-             <a href="./redux/1-hello.html">Hello Redux</a>
+             <a href="1.html">Hello Redux</a>
            </td>
          </tr>
       </tbody>
