--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <tr class="chapter-wrap">
          <td class="chapter-index">第 1 节</td>
          <td class="chapter-title">
-           <a href="./linux/1-github-pages.html"> Github Pages 创建个人网站</a>
+           <a href="./1.html"> Github Pages 创建个人网站</a>
          </td>
         </tr>
         <tr class="chapter-wrap">
