--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
       </p>
       <a href="#toc" class="read-btn">开始阅读</a>
     </div>
-    <img alt="git" class="book-image" src="images/book-cover.jpg" />
+    <!-- <img alt="git" class="book-image" src="images/book-cover.jpg" /> -->
   </div>
 </section>
 <div class="divider">
   <a href="#">PLACEHOLDER</a>
 </div>
 <div class="reviewers">
-  <div class="name-card">
+  <!-- <div class="name-card">
     <img src="https://avatars1.githubusercontent.com/u/72467?v=3&amp;s=460" />
     <div class="text">
       <div class="name">
@@ -52,7 +52,7 @@
       <div class="job-title"><a href="http://haoduoshipin.com">本书作者，好多视频网作者</a></div>
       JS 吃世界。
     </div>
-  </div>
+  </div> -->
 </div>
 <div id="toc"></div>
 <div class="contents-wrapper">
@@ -411,7 +411,7 @@
       <footer id='footer'>
   <nav class='nav'>
     <div class='wrapper-inside'>
-      <p>有任何问题请联系 <a href="https://github.com/happypeter">happypeter</a> ： happypeter1983@gmail.com <br> 所有内容基于 <a href="https://creativecommons.org/licenses/by/4.0/">允许商用保留署名的 CC 协议</a> 发布</p>
+      <p>有任何问题请联系 <a href="https://github.com/happypeter">殷玉达</a> ： 200833519@qq.com <br> 所有内容基于 <a href="https://creativecommons.org/licenses/by/4.0/">允许商用保留署名的 CC 协议</a> 发布</p>
     </div>
   </nav>
 </footer>
