--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>JS 独孤求败</title>
+    <title>kevin 快跑</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="favicon.png">
   </head>
