--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <div class="wrapper-inside clearfix">
     <div class="top-large">
       <div class="book-title">
-        JS 独孤求败
+        kevin 快跑
       </div>
       <div class="book-author">
-        <a href="https://github.com/happypeter">happypeter</a>
+        <a href="https://github.com/happypeter">luckykevin</a>
       </div>
       <p class="book-description">
         《 JS 独孤求败》是一本把你从零基础学员变成一个编程高手的厚厚的书。
